edition = "2023";

package wayplatform.connect.tachograph.datadictionary.v1;

import "wayplatform/connect/tachograph/datadictionary/v1/string_value.proto";

// Represents the name of a card holder, separating surname and first names.
//
// See Data Dictionary, Section 2.83.
//
// ASN.1 Definition:
//
//     HolderName ::= SEQUENCE {
//         holderSurname Name,
//         holderFirstNames Name
//     }
message HolderName {
  // The surname (family name) of the holder.
  //
  // See Data Dictionary, Section 2.99.
  //
  // ASN.1 Definition (`Name`):
  //
  //     Name ::= SEQUENCE {
  //         codePage INTEGER,
  //         name OCTET STRING
  //     }
  StringValue holder_surname = 1;

  // The first name(s) and initials of the holder.
  //
  // See Data Dictionary, Section 2.99.
  //
  // ASN.1 Definition (`Name`):
  //
  //     Name ::= SEQUENCE {
  //         codePage INTEGER,
  //         name OCTET STRING
  //     }
  StringValue holder_first_names = 2;
}
